--- a/athletic-greatness/package.json
+++ b/athletic-greatness/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "@types/node": "^22.10.2",
     "framer-motion": "^11.15.0",
+    "node-sass": "^9.0.0",
     "react": "^18.3.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.3.1"
@@ -31,6 +32,7 @@
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
+    "sass-embedded": "^1.83.0",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
