--- a/athletic-greatness/package.json
+++ b/athletic-greatness/package.json
@@ -16,7 +16,8 @@
     "node-sass": "^9.0.0",
     "react": "^18.3.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
